exports[`Storyshots Button with a label and an icon 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }>
  Settings ⚙️
</button>
`;

exports[`Storyshots Button with label 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }>
  Hello Button
</button>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots H1 with label 1`] = `
<h1
  style={
    Object {
      "fontSize": "2em",
      "marginBottom": "0.25em",
    }
  }>
  Header text
</h1>
`;
